--- a/.github/workflows/output.yml
+++ b/.github/workflows/output.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Checkout codebase
         uses: actions/checkout@v2.3.4
 
-      - name: Build geoip.dat file
+      - name: Build geosite.dat file
         run: |
           curl -L https://gist.githubusercontent.com/CalmLong/ac743d4bb1e16c9eff54e70ff2ecc4c6/raw/c4ea8f77ca338d342a3e1611aab4e3e78eefd533/gistfile1.txt -o block.txt
           
@@ -43,7 +43,7 @@ jobs:
           
           mkdir -p ./publish/domain
           go run geosite -D=true -d=true
-          mv geosite.dat ./publish/full
+          mv geosite.dat ./publish/domain
           
           mv block.txt ./publish
   
