--- a/.github/workflows/output.yml
+++ b/.github/workflows/output.yml
@@ -29,14 +29,25 @@ jobs:
       - name: Checkout codebase
         uses: actions/checkout@v2.3.4
 
-      - name: Build geosite.dat file
+      - name: Get block.txt
         run: |
           curl -L https://raw.githubusercontent.com/CalmLong/custom-block/main/block.txt -o block.txt
-          
+
+      - name: Build geosite.dat file
+        run: |
           mkdir -p ./publish/v2ray/
           go run geosite -D=true
           mv geosite.dat ./publish/v2ray/
-          mv block.txt ./publish/v2ray/
+          cp block.txt ./publish/v2ray/
+
+      - name: Build domain file
+        run: |
+          mkdir -p ./publish/domain/
+          go run geosite -D=true -F=domain
+          mv domain-block.txt ./publish/domain/
+          mv domain-cn.txt ./publish/domain/
+          mv domain-proxy.txt ./publish/domain/
+          cp block.txt ./publish/domain/
 
       - name: Git push assets to "release" branch
         run: |
@@ -53,3 +64,4 @@ jobs:
       - name: Delete publish directory
         run: |
           rm -rf publish
+          rm -rf block.txt
