--- a/.github/workflows/output.yml
+++ b/.github/workflows/output.yml
@@ -19,15 +19,12 @@ jobs:
       - name: Setup Go 1.x.y
         uses: actions/setup-go@v2
         with:
-          go-version: ^1.16
+          go-version: ^1.17
           
       - name: Set variables
         run: |
           echo "RELEASE_NAME=$(date +%Y%m%d%H%M)" >> $GITHUB_ENV
         shell: bash
-          
-      - name: Checkout codebase
-        uses: actions/checkout@v2.3.4
 
       - name: Get block.txt
         run: |
@@ -36,33 +33,9 @@ jobs:
       - name: Build geosite.dat file
         run: |
           mkdir -p ./publish/v2ray/
-          go run geosite -D=true
+          go run geosite
           mv geosite.dat ./publish/v2ray/
           cp block.txt ./publish/v2ray/
-
-      - name: Build domain file
-        run: |
-          mkdir -p ./publish/domain/
-          go run geosite -D=true -F=domain
-          mv domain-block.txt ./publish/domain/
-          mv domain-cn.txt ./publish/domain/
-          mv domain-proxy.txt ./publish/domain/
-          cp block.txt ./publish/domain/
-
-      - name: Build agh file
-        run: |
-          mkdir -p ./publish/agh/
-          go run geosite -F=agh
-          mv agh-cn.txt ./publish/agh/
-
-      - name: Build clashP file
-        run: |
-          mkdir -p ./publish/clashP/
-          go run geosite -D=true -F=clashP
-          mv clashP-block.yaml ./publish/clashP/
-          mv clashP-cn.yaml ./publish/clashP/
-          mv clashP-proxy.yaml ./publish/clashP/
-          cp block.txt ./publish/clashP/
 
       - name: Git push assets to "release" branch
         run: |
