--- a/.github/workflows/output.yml
+++ b/.github/workflows/output.yml
@@ -16,10 +16,10 @@ jobs:
     runs-on: ubuntu-latest
   
     steps:
-      - name: Setup Go 1.x.y
+      - name: Setup Go 1.x
         uses: actions/setup-go@v2
         with:
-          go-version: ^1.17
+          go-version: 1.17
           
       - name: Set variables
         run: |
@@ -33,8 +33,7 @@ jobs:
       - name: Build geosite.dat file
         run: |
           mkdir -p ./publish/v2ray/
-          go build geosite
-          ./geosite
+          go run geosite
           mv geosite.dat ./publish/v2ray/
           cp block.txt ./publish/v2ray/
 
