--- a/.github/workflows/output.yml
+++ b/.github/workflows/output.yml
@@ -16,10 +16,10 @@ jobs:
     runs-on: ubuntu-latest
   
     steps:
-      - name: Setup Go 1.x
+      - name: Setup Go
         uses: actions/setup-go@v2
         with:
-          go-version: 1.17
+          go-version: '^1.17'
           
       - name: Set variables
         run: |
