--- a/.github/workflows/output.yml
+++ b/.github/workflows/output.yml
@@ -19,12 +19,15 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v2
         with:
-          go-version: '^1.17'
+          go-version: ^1.17
           
       - name: Set variables
         run: |
           echo "RELEASE_NAME=$(date +%Y%m%d%H%M)" >> $GITHUB_ENV
         shell: bash
+
+      - name: Checkout codebase
+        uses: actions/checkout@v2.3.4
 
       - name: Get block.txt
         run: |
